--- a/sites/all/themes/changshanews/css/dashboard.css
+++ b/sites/all/themes/changshanews/css/dashboard.css
@@ -45,6 +45,7 @@
     float:right;
     color:#d7d7d7;
     font-size: 18px;
+    margin-right:100px
 }
 
 .sec_header{
@@ -56,7 +57,7 @@
 .dashboard_main_logo{
     width:106px;
     height:86px;
-    margin-left: 108px;
+    margin-left: 200px;
     margin-top: -130px;
 }
 
@@ -173,7 +174,7 @@
 .dashboard_footer .news_footer_contact{
     font-size: 12px;
     color:#8b8b8b;
-    padding : 60px 120px 30px 110px;
+    padding : 60px 100px 30px 202px;
     width: 38%;
     float: left;
 }
@@ -188,14 +189,16 @@
     float: left;
     padding-top : 60px ;
     margin-left: 20%;
+    text-align: right;
 }
 
 .dashboard_footer .friend_link{
     clear:left;
     font-size: 12px;
     color:#8b8b8b;
-    padding : 0px 20px 0px 110px;
+    padding : 0px 20px 0px 203px;
     float: left;
+   
 }
 
 .dashboard_footer .friend_link span{
