--- a/sites/all/themes/changshanews/css/work.css
+++ b/sites/all/themes/changshanews/css/work.css
@@ -75,3 +75,46 @@
     margin-right:13px;margin-left:13px;
     background-image: url(../images/work/summary/hjy.jpg);
 }
+
+/***************************************************************/
+
+.work_enviro_header{
+     background-image: url(../images/work/enviro/top.jpg);
+      background-color: #FFFFFF;
+    background-size: cover;
+    height: 515px;
+    margin: auto;
+    width: 100%;
+}
+
+.work_enviro_main_content{
+    background-color: #333333;
+    color: #dddddd;
+}
+.work_enviro_main_content_left{
+    float: left;
+    width: 20%;
+    padding:30px 50px 30px 230px;
+
+}
+.work_enviro_main_content_title{
+    font-size: 40px;
+}
+.work_enviro_main_content_right{
+    float: left;
+    width: 49%;
+    padding:30px 50px 30px 30px;
+    font-size: 12px;
+}
+
+.work_enviro_main_imgs{
+    background-color: #ffffff;
+    color:#333333;
+    padding:30px 120px 30px 230px;
+    font-size: 14px;
+}
+
+.work_enviro_main_img{
+    width: 999px;
+    padding-top: 20px ;
+}
