--- a/sites/all/themes/changshanews/css/company.css
+++ b/sites/all/themes/changshanews/css/company.css
@@ -121,8 +121,6 @@
     clear:both;
     width: 826px;
     margin-left:398px;
-    padding-top: 50px;
-    padding-bottom: 50px;
 }
 .team_member_list{
  padding-bottom: 80px;
@@ -158,14 +156,7 @@
     background-color: #ffffff;
 }
 
-.member_img a{
-    width: 100%;
-    height: 100%;
-}
 
-.img1{
-    background-image: url(../images/about/member/1.jpg);
-}
 
 .img2{
     background-image: url(../images/about/member/2.jpg);
@@ -197,4 +188,49 @@
 
 .img9{
     background-image: url(../images/about/member/9.jpg);
+}
+
+
+.big_img{
+    float:left;
+}
+
+.bgimg1{
+    background-image: url(../images/about/member/big/1.jpg);
+    width: 306px;
+    height: 444px;
+}
+
+.member_discrib{
+     float:left;
+}
+
+.member_discrib_left{
+    font-size: 36px;
+    float: left;
+    padding:150px 50px 50px 30px;
+}
+
+.member_discrib_right{
+    float: left;
+    padding:157px 38px 50px 0px;
+}
+
+.member_discrib_bottom{
+     clear:both;
+     border-top: 1px solid silver;
+     margin:30px 0px 0px 30px;
+     padding-top: 30px;
+     max-width: 440px;
+}
+
+.member_discrib_bottom p{
+    margin-bottom: 0px;
+}
+
+.work_about_team_memeber_main{
+    clear:both;
+    width: 826px;
+    margin-left:398px;
+    background-color: #ffffff;
 }
