add dymatic member

--- a/sites/all/themes/changshanews/css/dashboard.css
+++ b/sites/all/themes/changshanews/css/dashboard.css
@@ -52,6 +52,7 @@
     width: 100%;
     background-color: yellow;
     height:100px;
+	background: url(../images/footer/whiteStripe.png);
 }
 
 .dashboard_main_logo{
