--- a/sites/all/themes/changshanews/css/company.css
+++ b/sites/all/themes/changshanews/css/company.css
@@ -115,6 +115,7 @@
     padding: 50px 50px 50px 0px;
     font-size: 12px;
     max-width: 550px;
+    line-height: 30px;
 }
 
 .work_about_team_main{
