--- a/sites/all/themes/changshanews/css/dashboard.css
+++ b/sites/all/themes/changshanews/css/dashboard.css
@@ -132,21 +132,21 @@ body{
 
 .dashboard_main .small_log2{
     width: 70px;
-    height:130px;
+/*    height:130px;*/
     margin-left: 82%;
     margin-top: 150px;
 }
 
 .dashboard_main .small_log3{
     width: 170px;
-    height:140px;
+/*    height:140px;*/
     margin-left:15%;
     margin-top: 120px;
 }
 
 .dashboard_main .small_log4{
     width: 160px;
-    height:180px;
+/*    height:180px;*/
     margin-left:15%;
     margin-top: 145px;
 }
