--- a/sites/all/themes/changshanews/css/company.css
+++ b/sites/all/themes/changshanews/css/company.css
@@ -93,26 +93,20 @@
 }
 
 .log1{
-    width: 120px;
-/*    height: 73px;*/
-/*    margin-right: 141px;*/
+    width: 140px;
 }
 
 .log2{
-    width: 120px;
-/*    height: 180px;*/
-/*    margin-right: 200px;*/
+    width: 140px;
 }
 .log3{
-    width: 120px;
-/*    height: 120px;*/
-/*    margin-right: 170px;*/
+    width: 140px;
 }
 .work_about_company_text_area{
     float:left;
-    padding: 10px 10px 10px 20px;
+    padding: 43Px 10px 10px 40px;
     font-size: 14px;
-    max-width: 590px;
+    max-width: 580px;
     line-height: 28px;
 }
 
