--- a/sites/all/themes/changshanews/css/work.css
+++ b/sites/all/themes/changshanews/css/work.css
@@ -48,17 +48,15 @@
 }
 
 .div_img{
-    height: 362px;
+/*    height: 362px;*/
     width: 362px;
     background-size: cover;
     float: left;
     margin-bottom: 13px;
 }
-.div_img a{
-    width: 100%;
-    height: 100%;
-}
-.div_img_wp{
+
+
+/*.div_img_wp{
     background-image: url(../images/work/summary/wp.jpg);
 }
 .div_img_yg{
@@ -74,7 +72,7 @@
 .div_img_hjy{
     margin-right:13px;margin-left:13px;
     background-image: url(../images/work/summary/hjy.jpg);
-}
+}*/
 
 /***************************************************************/
 
