--- a/sites/all/themes/changshanews/css/company.css
+++ b/sites/all/themes/changshanews/css/company.css
@@ -9,6 +9,7 @@
     padding-top: 50px;
     padding-left: 0px;
     float: left;
+    font-family: fiber-black;
 }
 
 .ul_left li{
@@ -60,6 +61,7 @@
     color:yellow;
     clear :right;
     letter-spacing:4px;
+    font-family: fiber-black;
 }
 
 .work_about .div_right span {
@@ -67,6 +69,10 @@
     font-size: 20px;
     clear:right;
     float: right;
+}
+
+.work_about .div_right .en_right{
+    padding-right:115px;
 }
 
 .work_about_company_content{
@@ -81,6 +87,7 @@
     line-height: 40px;
     padding-left: 10px;
     clear:both;
+    font-family: fiber-black;
 }
 
 .work_about_company_content_title p{
@@ -113,6 +120,7 @@
     font-size: 12px;
     max-width: 580px;
     line-height: 28px;
+    font-family: fine-black;
 }
 
 .work_about_team_main{
@@ -126,6 +134,7 @@
 }
 .team_member_list p{
     color:#cccccc;
+    font-family: fiber-black;
 }
 .team_member_imgs{
     border-top: 1px solid #cccccc;
@@ -147,6 +156,7 @@
      background-color: yellow;
      padding-left:10px;
      color: black;
+     font-family: super-fine-black;
 }
 .member_img{
     width: 195px;
@@ -204,11 +214,13 @@
     font-size: 36px;
     float: left;
     padding:150px 50px 50px 30px;
+    font-family: super-fine-black;
 }
 
 .member_discrib_right{
     float: left;
     padding:157px 38px 50px 0px;
+    font-family: fiber-black;
 }
 
 .member_discrib_bottom{
@@ -217,6 +229,7 @@
      margin:30px 0px 0px 30px;
      padding-top: 30px;
      max-width: 440px;
+     font-family: fiber-black;
 }
 
 .member_discrib_bottom p{
@@ -226,6 +239,6 @@
 .work_about_team_memeber_main{
     clear:both;
     width: 826px;
-    margin-left:398px;
+    margin-left:368px;
     background-color: #ffffff;
 }
