--- a/sites/all/themes/changshanews/css/service.css
+++ b/sites/all/themes/changshanews/css/service.css
@@ -22,6 +22,7 @@
     padding-top: 50px;
     padding-left: 0px;
     float: left;
+    font-family: fiber-black;
 }
 .service_design_header .ul_left .active,.unactive {
     background-color: transparent;
@@ -68,6 +69,7 @@
     float: right;
     color:#aaaaaa;
     clear :right;
+    font-family: fiber-black;
 }
 
 .service_design_header .div_right span {
