--- a/sites/all/themes/changshanews/css/work.css
+++ b/sites/all/themes/changshanews/css/work.css
@@ -98,16 +98,19 @@
     float: left;
     width: 20%;
     padding:30px 50px 30px 158px;
+    font-family: fiber-black;
 
 }
 .work_enviro_main_content_title{
     font-size: 40px;
+    font-family: super-fine-black;
 }
 .work_enviro_main_content_right{
     float: left;
     width: 660px;
     padding:30px 50px 30px 60px;
     font-size: 12px;
+    font-family: fine-black;
 }
 
 .work_enviro_main_imgs{
@@ -115,6 +118,7 @@
     color:#333333;
     padding:30px 150px 30px 158px;
     font-size: 14px;
+    font-family: fine-black;
 }
 
 .work_enviro_main_imgs img{
