--- a/sites/all/themes/changshanews/css/work.css
+++ b/sites/all/themes/changshanews/css/work.css
@@ -111,6 +111,8 @@
     padding:30px 50px 30px 60px;
     font-size: 12px;
     font-family: fine-black;
+    line-height:26px;
+    letter-spacing:2px;
 }
 
 .work_enviro_main_imgs{
