--- a/sites/all/themes/changshanews/css/service.css
+++ b/sites/all/themes/changshanews/css/service.css
@@ -122,6 +122,10 @@
 #design_main .platform_item .platform_item_detail{
     font-size: 16px;
     margin-left: 20px;
+    border-top:1px solid #888;
+    margin-right: 20px;
+    padding-top: 30px;
+    margin-top:30px;
 }
 
 .platform_item_detail p{
