--- a/sites/all/themes/changshanews/css/work.css
+++ b/sites/all/themes/changshanews/css/work.css
@@ -80,7 +80,7 @@
 /***************************************************************/
 
 .work_enviro_header{
-     width: 1351px;
+     width: 100%;
      min-height: 775px;
 }
 /*.work_enviro_header img{
