--- a/sites/all/themes/changshanews/css/work.css
+++ b/sites/all/themes/changshanews/css/work.css
@@ -111,7 +111,7 @@
     padding:30px 50px 30px 60px;
     font-size: 12px;
     font-family: fine-black;
-    line-height:26px;
+    line-height:24px;
     letter-spacing:2px;
 }
 
@@ -121,6 +121,8 @@
     padding:30px 150px 30px 158px;
     font-size: 14px;
     font-family: fine-black;
+    line-height:24px;
+    letter-spacing:2px;
 }
 
 .work_enviro_main_imgs img{
