--- a/sites/all/themes/changshanews/css/service.css
+++ b/sites/all/themes/changshanews/css/service.css
@@ -70,7 +70,7 @@
     float: right;
     color:#aaaaaa;
     clear :right;
-/*    font-family: fiber-black;*/
+    font: Microsoft YaHei,"\5B8B\4F53",Arial,HELVETICA;
 }
 
 .service_design_header .div_right span {
