--- a/sites/all/themes/changshanews/css/work.css
+++ b/sites/all/themes/changshanews/css/work.css
@@ -24,9 +24,10 @@
     float: right;
     margin-right: 155px;
     padding-left: 0;
-    padding-top: 50px;
+    padding-top: 40px;
     letter-spacing:4px;
-    font: Microsoft YaHei,"\5B8B\4F53",Arial,HELVETICA;
+/*    font: Microsoft YaHei,"\5B8B\4F53",Arial,HELVETICA;*/
+    font-family: 'Maven Pro', sans-serif;
 }
 #work_summary_right span {
     background-color: yellow;
