--- a/sites/all/themes/changshanews/css/service.css
+++ b/sites/all/themes/changshanews/css/service.css
@@ -1,4 +1,3 @@
-
 /***********************************/
 .service_design_header{
     background-color: #ffffff;
@@ -70,7 +69,8 @@
     float: right;
     color:#aaaaaa;
     clear :right;
-    font: Microsoft YaHei,"\5B8B\4F53",Arial,HELVETICA;
+/*    font: Microsoft YaHei,"\5B8B\4F53",Arial,HELVETICA;*/
+    font-family: 'Maven Pro', sans-serif;
 }
 
 .service_design_header .div_right span {
