--- a/sites/all/themes/changshanews/css/company.css
+++ b/sites/all/themes/changshanews/css/company.css
@@ -62,7 +62,8 @@
     clear :right;
     letter-spacing:4px;
 /*    font-family: fiber-black;*/
-    font: Microsoft YaHei,"\5B8B\4F53",Arial,HELVETICA;
+/*    font: Microsoft YaHei,"\5B8B\4F53",Arial,HELVETICA;*/
+    font-family: 'Maven Pro', sans-serif;
 }
 
 .work_about .div_right span {
