--- a/sites/all/themes/changshanews/css/work.css
+++ b/sites/all/themes/changshanews/css/work.css
@@ -27,7 +27,7 @@
     padding-top: 40px;
     letter-spacing:4px;
 /*    font: Microsoft YaHei,"\5B8B\4F53",Arial,HELVETICA;*/
-    font-family: 'Maven Pro', sans-serif;
+    font-family: 'Pontano Sans', sans-serif;
 }
 #work_summary_right span {
     background-color: yellow;
