--- a/sites/all/themes/changshanews/css/dashboard.css
+++ b/sites/all/themes/changshanews/css/dashboard.css
@@ -1,5 +1,5 @@
-    @import url(http://fonts.googleapis.com/css?family=Maven+Pro);
-    
+/*    @import url(http://fonts.googleapis.com/css?family=Maven+Pro);*/
+    @import url(http://fonts.googleapis.com/css?family=Pontano+Sans);
     @font-face {
        font-family: "fzlt";
        font-style: normal;
