--- a/sites/all/themes/changshanews/css/service.css
+++ b/sites/all/themes/changshanews/css/service.css
@@ -70,7 +70,7 @@
     color:#aaaaaa;
     clear :right;
 /*    font: Microsoft YaHei,"\5B8B\4F53",Arial,HELVETICA;*/
-    font-family: 'Maven Pro', sans-serif;
+    font-family: 'Pontano Sans', sans-serif;
 }
 
 .service_design_header .div_right span {
