--- a/sites/all/themes/changshanews/css/dashboard.css
+++ b/sites/all/themes/changshanews/css/dashboard.css
@@ -41,6 +41,10 @@ body{
 
 }
 
+#test {
+    behavior: url("pie/PIE.htc");
+}
+
 .dashboard-page{
      background-color: #494949!Important;
      min-width: 1100px;
