--- a/sites/all/themes/changshanews/css/work.css
+++ b/sites/all/themes/changshanews/css/work.css
@@ -23,6 +23,8 @@
     color: black;
     float: right;
     margin-right: 155px;
+/*    float:left;
+    margin-left: 555px;*/
     padding-left: 0;
     padding-top: 40px;
     letter-spacing:4px;
