--- a/sites/all/themes/changshanews/css/company.css
+++ b/sites/all/themes/changshanews/css/company.css
@@ -121,7 +121,8 @@
     max-width: 580px;
     line-height: 28px;
 /*    font-family: fine-black;*/
-    font: Microsoft YaHei,"\5B8B\4F53",Arial,HELVETICA;
+/*    font: Microsoft YaHei,"\5B8B\4F53",Arial,HELVETICA;*/
+    font-family:"Microsoft YaHei" ! important;
 }
 
 .work_about_team_main{
