--- a/sites/all/themes/changshanews/css/dashboard.css
+++ b/sites/all/themes/changshanews/css/dashboard.css
@@ -1,5 +1,14 @@
 /*    @import url(http://fonts.googleapis.com/css?family=Maven+Pro);*/
-    @import url(http://fonts.googleapis.com/css?family=Pontano+Sans);
+/*    @import url(http://fonts.googleapis.com/css?family=Pontano+Sans);*/
+
+    @font-face {
+      font-family: 'Pontano Sans';
+      font-style: normal;
+      font-weight: 400;
+      src: local('Pontano Sans'), local('PontanoSans-Regular'),
+          url("font/FZLTXHK_0.TTF") format('woff');
+    }
+
     @font-face {
        font-family: "fzlt";
        font-style: normal;
