--- a/sites/all/themes/changshanews/css/dashboard.css
+++ b/sites/all/themes/changshanews/css/dashboard.css
@@ -44,7 +44,7 @@
 
 body{
 /*    display:none;*/
-    font-family: fzlt_0;
+/*    font-family: fzlt_0;*/
 /*    background:#FFF url(../images/whiteStripe.png) fixed;*/
 /*    font: Microsoft YaHei,"\5B8B\4F53",Arial,HELVETICA;*/
 
