--- a/sites/all/themes/changshanews/css/dashboard.css
+++ b/sites/all/themes/changshanews/css/dashboard.css
@@ -69,7 +69,7 @@ body{
     width: 100%;
     background-color: black;
     height:60px;
-    font-family: fiber-black;
+/*    font-family: fiber-black;*/
  
 }
 
