--- a/sites/all/themes/changshanews/css/dashboard.css
+++ b/sites/all/themes/changshanews/css/dashboard.css
@@ -124,10 +124,10 @@ body{
 }
 
 .dashboard_main_logo{
-    width:106px;
-    height:86px;
+    width:80px;
+/*    height:86px;*/
     margin-left: 120px;
-    margin-top: -130px;
+    margin-top: 5px;
 }
 
 .dashboard_main{
